# operations

./: .gitignore  README.md  pyproject.toml
src/: main.py
tests/: test_services.py
utils/: services.py
